--- a/web/index.html
+++ b/web/index.html
@@ -68,7 +68,7 @@
 
         <script src="js/vendor/jquery-1.10.2.min.js"></script>
         <script src="js/highcharts.min.js"></script>
-        <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
